fix spacing issue on posts

--- a/assets/css/objects/_blog.scss
+++ b/assets/css/objects/_blog.scss
@@ -13,3 +13,7 @@
 		margin-bottom: 0;
 	}
 }
+
+.post .meta-masthead {
+	margin-bottom: 80px;
+}
